fix: uniformising spacing

--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -76,7 +76,7 @@
 /* home items style */
 
 .home-item-container {
-    margin-top: 10vh;
+    margin-top: 5em;
 }
 
 .home-item-container .home-item-img {
